<resources>
    <string name="app_name">PlaneShooterKotlin</string>
    <string name="restart">Restart</string>
    <string name="todo">TODO</string>
    <string name="exit">Exit</string>
    <string name="score">Score:</string>
    <string name="textview">TextView</string>
    <string name="personal_best">Personal best:</string>
    <string name="textview2">TextView</string>
    <string name="todo2">TODO</string>
</resources>