<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/nightsky"
    >

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/restart"
        android:onClick="restart"
        android:background="@android:color/holo_blue_dark"
        android:textColor="#000000"
        android:textSize="18sp"
        android:padding="10dp"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/exit"
        android:onClick="exit"
        android:background="@android:color/holo_blue_dark"
        android:textColor="#000000"
        android:textSize="18sp"
        android:padding="10dp"
        tools:ignore="RelativeOverlap" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score" />

            <TextView
                android:id="@+id/tvScore"
                android:textSize="36sp"
                android:textColor="@android:color/holo_orange_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_best" />

            <TextView
                android:id="@+id/tvPersonalBest"
                android:textColor="@android:color/holo_green_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview2" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/game_over"
            android:contentDescription="@string/todo2" />
    </LinearLayout>
</RelativeLayout>